--- a/cliente/front/src/componentes/style/maker.css
+++ b/cliente/front/src/componentes/style/maker.css
@@ -1,10 +1,29 @@
 .cont{
+  margin: auto;
   display: flex;
-  background-color: aliceblue;
-  text-align: center;
+  align-items: center;
+  justify-content: space-around;
+
 }
-.drop{
-  text-align: center;
+.cont:nth-of-type(3){
+  flex: 2;
+}
+.cont button{
+  margin:50px;
+}
+
+.drag{ 
+  text-align: legth;
   flex-direction: column;
-  background-color: rgb(121, 179, 135);
+  background-color: rgb(194, 204, 196);
+  height: 900px;
+  width: 600px;
+}
+
+.drop{
+  background-color: rgb(99, 95, 95);
+  height: 900px;
+  width: 600px;
+  text-align: center;
+  
 }
