--- a/cliente/front/src/componentes/style/home.css
+++ b/cliente/front/src/componentes/style/home.css
@@ -1,12 +1,18 @@
 
 h1 { 
   text-align: center;  
+ 
 }
 
 .bar{
-  background-color: rgb(50, 0, 231);
+  background-color: rgb(25, 218, 218);
   position: relative;
   top: 100%;
   color: rgb(0, 0, 0);
   
+}
+
+.top{
+  background-color: rgb(245, 209, 7);
+
 }
